# gl-nightmare

./: .gitignore  LICENSE  deploy.sh  meson.build
.devcontainer/: Dockerfile  devcontainer.json
src/: common.c  common.h  egl.c  egl.h  main.c  meson.build  random.c  random.h  signal-handler.c  signal-handler.h
src/scenes/: fixed-graph.c  fixed-graph.h  floating-graph.c  floating-graph.h  meson.build  scenes.c  scenes.h
